dark mode fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,8 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: #fff;
-  @apply font-serif;
+  @apply font-serif bg-white dark:bg-neutral-900 text-black dark:text-neutral-50;
 }
 
 a {
